--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<header class="header">
 			<nav class="navbar navbar-expand-md nav-top">
 				<div class="container">
-					<a href="javascript:void(0)" class="navbar-brand">
+					<a href="https://daminarof.com" target="blank" class="navbar-brand">
 						<img src="img/logo.png" alt="daminarof">
 					</a>
 					<button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#nav-top">
